criado metodos PUT E DELETE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.hibernate.format_sql=true
 #SWAGGER
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
+server.error.include-exception=false
+server.error.include-message=always
+server.error.inlude-stacktrace=never
