--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>		
+		</dependency>
+		
+		
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.9.2</version>		
